<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.view.MainActivity">

    <ImageView
        android:id="@+id/left"
        android:layout_width="243dp"
        android:layout_height="331dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="132dp"
        android:contentDescription="@string/des_img"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/desing_left" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="442dp" />

    <ImageView
        android:id="@+id/righ_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/des_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/desing_right_bottom" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743">


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            app:helperTextTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/gmailUpn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Escribe tu correo upn"/>


        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="35dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            app:helperTextTextColor="@color/black"

            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id = "@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Contraseña"/>


        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/iniciar"
            android:onClick="btnLogin"
            android:background="@drawable/btn_upn"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/registrate"
            android:textAlignment="center"
            android:onClick="redirectRegister"
            android:textColor="@color/color_register" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="239dp"
        android:layout_height="309dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427"
        app:srcCompat="@drawable/logo_collab" />

    <FrameLayout
        android:id="@+id/loginFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />



</androidx.constraintlayout.widget.ConstraintLayout>