<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.view.MainActivity">

    <ImageView
        android:id="@+id/left"
        android:layout_width="243dp"
        android:layout_height="331dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="132dp"
        android:contentDescription="@string/des_img"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/desing_left" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="442dp" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="398dp"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/left"
        app:layout_constraintVertical_bias="0.854">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            app:helperTextTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cod_upn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Codigo universitario" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                app:helperTextTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nombre" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                app:helperTextTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Apellido" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/gmail_upn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Correo universitario" />
        </com.google.android.material.textfield.TextInputLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="284dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp">

                <AutoCompleteTextView
                    android:id="@+id/careers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType = "none"
                    android:hint="Carrera Universitaria" />
            </com.google.android.material.textfield.TextInputLayout>


            <ImageButton
                android:id="@+id/addCareerMemory"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:src="@drawable/send_carrer"
                />
        </LinearLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/containerCareers"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_margin="5dp"
            app:flexWrap="wrap"
            app:justifyContent="flex_start"/>



        <View
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_upn"
            android:text="@string/register"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="redirectLogin"
            android:text="@string/logueate"
            android:textAlignment="center"
            android:textColor="@color/color_register" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="198dp"
        android:layout_height="264dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo_collab" />

    <ImageView
        android:id="@+id/righ_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/des_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/desing_right_bottom" />

</androidx.constraintlayout.widget.ConstraintLayout>